--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Puppycat's Python Journey
+name: Nicola Sassone's Website!
 
 # Short bio or description (displayed in the header)
-description: I love spinach meow meow meow
+description: Probably napping or eating...
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
